python-gevent (1.0~b4-1) experimental; urgency=low

  * New upstream version.
  * Switched to dh_python2.

 -- Örjan Persson <orange@fobie.net>  Fri, 14 Sep 2012 23:05:01 -0700

python-gevent (1.0~b3-1) experimental; urgency=low

  * New upstream version.

 -- Örjan Persson <orange@fobie.net>  Sun, 29 Jul 2012 09:49:01 -0700

python-gevent (1.0~b1-1) experimental; urgency=low

  * New upstream version.

 -- Örjan Persson <orange@fobie.net>  Mon, 16 Jan 2012 22:02:48 +0100

python-gevent (1.0~a3-1) experimental; urgency=low

  * New upstream version.

 -- Örjan Persson <orange@fobie.net>  Wed, 26 Oct 2011 21:54:21 +0200

python-gevent (0.13.6-2) unstable; urgency=low

  * Added dependency on libjs-underscore. Thanks to Nick Barkas for patch.
  * Fixed debug package. Thanks to Nick Barkas for patch.

 -- Örjan Persson <orange@fobie.net>  Wed, 19 Oct 2011 20:00:59 +0200

python-gevent (0.13.6-1) unstable; urgency=low

  * New upstream version (Closes: #601863).

 -- Örjan Persson <orange@fobie.net>  Tue, 17 May 2011 16:43:20 +0200

python-gevent (0.13.0-2) unstable; urgency=low

  * Include changes from squeeze version (0.12.2-7).

 -- Örjan Persson <orange@fobie.net>  Fri, 10 Sep 2010 09:59:05 +0200

python-gevent (0.13.0-1) unstable; urgency=low

  * New upstream version (Closes: #589268).
  * Removed cython dependency.
  * Updated doc package and depends on libjs-jquery.
  * Added support for sphinx 1.0b1 (Closes: #588628).

 -- Örjan Persson <orange@fobie.net>  Thu, 22 Jul 2010 12:09:58 +0200

python-gevent (0.12.2-7) unstable; urgency=low

  * Fixed a build problem with sphinx generation when no internet connection
    where available. Thanks to Jakub Wilk for reporting the problem and
    John Sullivan for patch (Closes: #584380).
  * Fixed documentation reference problems. Thanks to John Sullivan for patch.

 -- Örjan Persson <orange@fobie.net>  Mon, 06 Sep 2010 20:39:02 +0200

python-gevent (0.12.2-6) unstable; urgency=low
