@@ -1,0 +1,2 @@
+usr/lib/python3*/*/*.egg-info
+usr/lib/python3*/*/*/*.[ps]?
