@@ -1,23 +1,47 @@
 #!/usr/bin/make -f
-%:
-	dh $@ --with python2
 
-override_dh_auto_build:
-	dh_auto_build
-	PYTHONPATH=.. make --directory doc/ html
+PYTHON2=$(shell pyversions -vr)
+PYTHON3=$(shell py3versions -vr)
+
+%:
+	dh $@ --with python2,python3
 
 override_dh_auto_clean:
 	dh_auto_clean
 	rm -f gevent/*.so
 	cd doc && make clean
 	rm -f doc/changelog.rst
+	rm -rf py3/
+
+configure-python%:
+	python$* setup.py sdist --manifest-only
+	mkdir -p py3/python$*/gevent
+	grep -v '#' MANIFEST | grep -vE '^(doc|examples|greentest|util)' | xargs -IX cp -v X py3/python$*/X
+	2to3-$* -w --no-diffs py3/python$*/gevent
+
+override_dh_auto_configure: $(PYTHON3:%=configure-python%)
+	dh_auto_configure
+
+build-python%:
+	cd py3/python$* && python$* setup.py build
+
+override_dh_auto_build: $(PYTHON3:%=build-python%)
+	dh_auto_build
+	PYTHONPATH=.. make --directory doc/ html
+
+install-python%:
+	cd py3/python*$ && python$* setup.py install --root=$(CURDIR)/debian/tmp --install-layout=deb
+
+override_dh_auto_install: $(PYTHON3:%=install-python%)
+	dh_auto_install
 
 override_dh_compress:
 	dh_compress -X.js -X_static/* -X _sources/* -X_sources/*/* -X.inv
 
 override_dh_strip:
 ifeq (,$(filter nostrip,$(DEB_BUILD_OPTIONS)))
-	dh_strip --dbg-package=python-gevent-dbg
+	dh_strip -ppython-gevent --dbg-package=python-gevent-dbg
+	dh_strip -ppython3-gevent --dbg-package=python3-gevent-dbg
 endif
 
 override_dh_installdocs:
